# internal/zikr/port/http/zikr_favorite.go
@@ -18,16 +18,17 @@ func NewZikrFavoriteHandler(service domain.ZikrFavoritesUsecase) *zikrFavoriteHa
 	}
 }
 
-// @Summary Mark zikr as favorite
-// @Description This API marks zikr as favorite
-// @Tags zikr-favs
-// @Accept json
-// @Produce json
-// @Param body body model.Patch true "body"
-// @Success 200 {string} string "updated to favorite"
-// @Failure 400 {string} string "invalid request body"
-// @Failure 404 {string} string "could not update"
-// @Router /zikr-favs/favorite [patch]
+// asdasd
+// //@Summary Mark zikr as favorite
+// //@Description This API marks zikr as favorite
+// //@Tags zikr-favs
+// //@Accept json
+// //@Produce json
+// //@Param body body model.Patch true "body"
+// //@Success 200 {string} string "updated to favorite"
+// //@Failure 400 {string} string "invalid request body"
+// //@Failure 404 {string} string "could not update"
+// //@Router /zikr-favs/favorite [patch]
 func (z *zikrFavoriteHandler) ToggleFavorite(w http.ResponseWriter, r *http.Request) {
 	var req model.Patch
 	err := json.NewDecoder(r.Body).Decode(&req)
@@ -50,16 +51,17 @@ func (z *zikrFavoriteHandler) ToggleFavorite(w http.ResponseWriter, r *http.Requ
 	w.WriteHeader(http.StatusOK)
 }
 
-// @Summary Mark zikr as unfavorite
-// @Description This API marks zikr as unfavorite
-// @Tags zikr-favs
-// @Accept json
-// @Produce json
-// @Param body body model.Patch true "body"
-// @Success 200 {string} string "updated to unfavorite"
-// @Failure 400 {string} string "invalid request body"
-// @Failure 404 {string} string "could not update to unfavorite"
-// @Router /zikr-favs/unfavorite [patch]
+// asdas
+// // @Summary Mark zikr as unfavorite
+// // @Description This API marks zikr as unfavorite
+// // @Tags zikr-favs
+// // @Accept json
+// // @Produce json
+// // @Param body body model.Patch true "body"
+// // @Success 200 {string} string "updated to unfavorite"
+// // @Failure 400 {string} string "invalid request body"
+// // @Failure 404 {string} string "could not update to unfavorite"
+// // @Router /zikr-favs/unfavorite [patch]
 func (z *zikrFavoriteHandler) ToggleUnFavorite(w http.ResponseWriter, r *http.Request) {
 	var req model.Patch
 	err := json.NewDecoder(r.Body).Decode(&req)
@@ -82,16 +84,17 @@ func (z *zikrFavoriteHandler) ToggleUnFavorite(w http.ResponseWriter, r *http.Re
 	w.WriteHeader(http.StatusOK)
 }
 
-// @Summary Get all favorites or unfavorites
-// @Description This API retrieves a list of favorite or unfavorite zikrs based on the endpoint
-// @Tags zikr-favs
-// @Accept json
-// @Produce json
-// @Param    user_guid query string true "UserGuid of the zikr"
-// @Success 200 {object} model.Zikrs "body"
-// @Failure 400 {string} string "invalid request body"
-// @Failure 404 {string} string "failed to retrieve favorites/unfavorites"
-// @Router /zikr-favs/all-favorites [get]
+// asdas
+// // @Summary Get all favorites or unfavorites
+// // @Description This API retrieves a list of favorite or unfavorite zikrs based on the endpoint
+// // @Tags zikr-favs
+// // @Accept json
+// // @Produce json
+// // @Param    user_guid query string true "UserGuid of the zikr"
+// // @Success 200 {object} model.Zikrs "body"
+// // @Failure 400 {string} string "invalid request body"
+// // @Failure 404 {string} string "failed to retrieve favorites/unfavorites"
+// // @Router /zikr-favs/all-favorites [get]
 func (z *zikrFavoriteHandler) GetAllFavorites(w http.ResponseWriter, r *http.Request) {
 	userGuid := r.URL.Query().Get("user_guid")
 
@@ -124,16 +127,17 @@ func (z *zikrFavoriteHandler) GetAllFavorites(w http.ResponseWriter, r *http.Req
 	}
 }
 
-// @Summary Get all favorites or unfavorites
-// @Description This API retrieves a list of favorite or unfavorite zikrs based on the endpoint
-// @Tags zikr-favs
-// @Accept json
-// @Produce json
-// @Param  user_guid query string true "GUID of the user"
-// @Success 200 {object} model.Zikrs "body"
-// @Failure 400 {string} string "invalid request body"
-// @Failure 404 {string} string "failed to retrieve favorites/unfavorites"
-// @Router /zikr-favs/all-unfavorites [get]
+// xcscs
+// // @Summary Get all favorites or unfavorites
+// // @Description This API retrieves a list of favorite or unfavorite zikrs based on the endpoint
+// // @Tags zikr-favs
+// // @Accept json
+// // @Produce json
+// // @Param  user_guid query string true "GUID of the user"
+// // @Success 200 {object} model.Zikrs "body"
+// // @Failure 400 {string} string "invalid request body"
+// // @Failure 404 {string} string "failed to retrieve favorites/unfavorites"
+// // @Router /zikr-favs/all-unfavorites [get]
 func (z *zikrFavoriteHandler) GetAllUnFavorites(w http.ResponseWriter, r *http.Request) {
 	//userGuid := r.URL.Query().Get("user_guid")
 
